# openVINO

./: README.md  openVINO例程运行
AI_work/: README.md
AI_work/crossroad_camera_demo_cpp/: README.md  build.sh  start.sh
AI_work/crossroad_camera_demo_cpp/crossroad_camera_demo/: README.md
AI_work/face-access-control/cmake/: FindDemoOpenCV.cmake  osdetect.cmake
AI_work/face-access-control/src/: mqtt.cpp
AI_work/face_access_control_cpp/: CMakeLists.txt  README.md  build.sh  start.sh
AI_work/face_access_control_cpp/cmake/: pahomqtt.cmake
AI_work/face_access_control_cpp/src/: cvservice.cpp
AI_work/license_plate_recognition_cpp/: CMakeLists.txt  README.md  build.sh  start.sh
AI_work/license_plate_recognition_cpp/lpr/: CMakeLists.txt
AI_work/license_plate_recognition_cpp/lpr/src/: main.cpp
AI_work/machine-operator-monitor-cpp/: README.md  build.sh
AI_work/machine-operator-monitor-cpp/src/: main.cpp
AI_work/machine_operator_monitor_cpp/: README.md  start.sh
AI_work/machine_operator_monitor_cpp/src/: main.cpp
AI_work/mqtt_py/: README.md  mqtt_client.py  mqtt_client2.py
AI_work/parking-lot-counter-cpp/: CMakeLists.txt  README.md
AI_work/parking_lot_counter_cpp/: README.md  build.sh  start.sh
AI_work/parking_lot_counter_cpp/src/: main.cpp
AI_work/pedestrian_tracker_cpp/: README.md  picture_video.py  start.sh
AI_work/pedestrian_tracker_cpp/pedestrian_tracker_demo/: README.md  main.cpp
AI_work/restricted-zone-notifier-cpp/: diagrams.txt  start.sh
AI_work/restricted-zone-notifier-cpp/src/: CvxText.h  main.cpp
AI_work/restricted_zone_notifier_cpp/: CMakeLists.txt  README.md
AI_work/restricted_zone_notifier_cpp/src/: main.cpp
AI_work/security_barrier_camera_cpp/: CMakeLists.txt  README.md  start.sh
AI_work/security_barrier_camera_cpp/security_barrier_camera_demo/: CMakeLists.txt  CvxText.cpp  README.md  main.cpp
AI_work/yolov3-cpp/: CMakeLists.txt  README.md  build.sh  start.sh
AI_work/yolov3-cpp/object_detection_demo_yolov3_async/: main.cpp
AI_work/yolov3_cpp/: README.md
AI_work/yolov3_cpp/object_detection_demo_yolov3_async/: CMakeLists.txt
reference_example/paho.mqtt.c/: appveyor.yml
reference_example/people-counter/: README.md
reference_example/web_detector/: README.md
reference_example/web_detector/application/: CMakeLists.txt
reference_example/web_detector/application/resources/: conf.txt  ssd-cpu.xml  ssd-ncs.xml
